Implemented changes based on Sania's suggestions

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 /* Write all your styling in this style.css */
 
-
 /* -----------------------------------------
   RESPONSIVENESS
   Please write ALL your responsive code 
@@ -15,8 +14,11 @@
 -------------------------------------------- */
 
 /* General Styles */
+html {
+  font-size: 16px;
+}
 
-.business-overview {
+.dashboard-headings {
   font-weight: 700;
   font-size: 1.25rem;
   line-height: 100%;
@@ -24,7 +26,9 @@
   margin-top: 11.2px;
   margin-bottom: 17px;
 }
-
+.dashboard-shadow {
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.08);
+}
 .stats-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -42,14 +46,13 @@
   width: auto;
   height: auto;
   border-radius: 10px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.08);
-  /* box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.08); */
+
   outline: none;
 }
 
 .stat-heading {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 100%;
   letter-spacing: 0%;
   text-transform: uppercase;
@@ -58,7 +61,7 @@
 
 .stat-one {
   font-weight: 700;
-  font-size: 28px;
+  font-size: 1.75rem;
   line-height: 100%;
   letter-spacing: 0%;
   text-transform: capitalize;
@@ -67,7 +70,7 @@
 
 .stat-two {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 100%;
   letter-spacing: 0%;
   text-transform: capitalize;
@@ -82,13 +85,15 @@
 
 .new-orders-container {
   background-color: white;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.08);
+
   flex: 1;
 }
 
 .new-order-details {
   display: flex;
+
   flex-direction: column;
+  flex: 1;
 }
 
 .order-info-line--one {
@@ -113,26 +118,16 @@
   flex-wrap: nowrap;
 }
 
-.payment-method,
 .payment-method-Paid {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 27px;
-  border-radius: 20px;
+  background-color: var(--color-green-light);
 }
 
 .payment-method-COD {
   background-color: var(--color-red-light);
-  max-width: 120px;
-}
-
-.payment-method-Paid {
-  background-color: var(--color-green-light);
-  min-width: 48px;
 }
 
 .payment-method-text {
+  text-transform: uppercase;
   font-weight: 400;
   font-size: 0.8125rem;
   margin-bottom: 0;
@@ -172,7 +167,7 @@
   margin-right: 15px;
 }
 
-.half-btn{
+.half-btn {
   width: 49%;
 }
 
@@ -191,7 +186,6 @@
   flex-direction: column;
   justify-content: center;
   background-color: white;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.08);
 }
 
 .weeklyTrend-heading,
@@ -200,7 +194,6 @@
 .messages-heading {
   font-weight: 700;
   font-size: 1.25rem;
-  padding-left: 0.5625rem;
   padding-right: 1.1875rem;
   line-height: 100%;
   letter-spacing: 0%;
@@ -215,7 +208,6 @@
 }
 
 .weekly-delivery-trend {
-  width: 520px;
   height: 310px;
   padding-top: 1.125rem;
   padding-left: 1.5625rem;
@@ -225,8 +217,6 @@
 .active-orders {
   flex: 1;
   background: white;
-  padding-top: 1.375rem;
-  padding-bottom: 1rem;
   display: flex;
   flex-direction: column;
   background-color: white;
@@ -235,6 +225,9 @@
 .active-order-text-btn {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  margin-top: 11.2px;
+  margin-bottom: 17px;
 }
 
 .view-all-btn-2 {
@@ -358,12 +351,12 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.08);
+
   overflow-y: auto;
 }
 
 .notification-details {
-  padding: 0.75rem 0 0.8125rem 1.1875rem;
+  padding: 0.75rem 0rem 0.8125rem 1.625rem;
   display: flex;
   flex-direction: column;
   max-width: 500px;
@@ -403,7 +396,7 @@
 }
 
 .messages-details {
-  padding: 0.75rem 0 0.8125rem 1.1875rem;
+  padding: 0.75rem 0rem 0.8125rem 1.625rem;
   display: flex;
   flex-direction: column;
   gap: 4.6px;
@@ -465,19 +458,13 @@
 
   .new-orders-wrapper {
     display: flex;
-    flex-direction: column;
+
     gap: 13px;
   }
-  .new-orders-heading {
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 100%;
-    letter-spacing: 0%;
-    text-transform: capitalize;
-  }
+
   .credits-heading {
     font-weight: 700;
-    font-size: 20px;
+    font-size: 1.25rem;
     margin-top: 34px;
     line-height: 100%;
     letter-spacing: 0%;
@@ -486,12 +473,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 2.0625rem;
-    margin-bottom: 0.75rem;
+    margin-top: 11.2px;
+    margin-bottom: 17px;
   }
   .view-all-btn {
     font-weight: 400;
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 100%;
     color: var(--color-link);
     background: transparent;
@@ -507,7 +494,7 @@
     min-width: 70px;
     height: 1rem;
     padding: 0px 5px 0px 5px;
-    font-size: 8px;
+    font-size: 0.5rem;
     min-width: 60px;
     justify-content: center;
     align-items: center;
@@ -515,7 +502,7 @@
   }
   .weeklyTrend-and-activeOrders,
   .notifications-messages {
-    flex-direction: column; /* Stack elements vertically on tablets */
+    flex-direction: column;
   }
 
   .weekly-delivery-trend {
@@ -523,13 +510,31 @@
     height: 280px; /* Adjust chart height for tablets */
     padding-left: 0; /* Remove extra padding */
   }
-
+  .weeklyTrend-container {
+    margin-bottom: 10px;
+  }
+  .credits-heading {
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
   .order-info-line--three {
     gap: 150px; /* Adjust gap for better layout on tablets */
   }
-
-
-
+  .active-order-text-btn {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 25px;
+    margin-bottom: 0px;
+  }
+  .view-all-btn-2 {
+    margin-right: 0;
+    margin-bottom: 20px;
+    padding-right: 20px;
+  }
+  .credits {
+    margin-top: 0px;
+  }
   .buy-credits-btn {
     margin-left: 21%; /* Center button */
     margin-right: auto; /* Center button */
@@ -570,7 +575,7 @@
     width: auto;
     height: auto;
     border-radius: 10px;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.08);
+
     outline: none;
   }
 
@@ -583,7 +588,7 @@
 
   .stat-one {
     font-weight: 700;
-    font-size: 20px;
+    font-size: 1.25rem;
     line-height: 100%;
     letter-spacing: 0%;
     text-transform: capitalize;
@@ -592,7 +597,7 @@
 
   .stat-two {
     font-weight: 400;
-    font-size: 12px;
+    font-size: 0.75rem;
     line-height: 100%;
     letter-spacing: 0%;
     text-transform: capitalize;
@@ -603,7 +608,6 @@
     display: flex;
     flex-direction: column;
     gap: 13px;
-    padding: 5px;
   }
 
   .new-orders-heading {
@@ -615,7 +619,7 @@
   .view-all-btn,
   .view-all-btn-2 {
     font-weight: 400;
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 100%;
     color: var(--color-link);
     background: transparent;
@@ -631,8 +635,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 2.0625rem;
-    margin-bottom: 0.75rem;
+    margin-top: 11.2px;
+    margin-bottom: 17px;
   }
 
   .new-order-details {
@@ -648,11 +652,9 @@
   .payment-method-COD,
   .payment-method-Paid {
     display: flex;
-    width: 70px;
     height: 1rem;
-    padding: 0px 5px 0px 5px;
-    font-size: 8px;
-    min-width: 60px;
+    padding: 0px 7px 0px 7px;
+    font-size: 0.5rem;
     justify-content: center;
     align-items: center;
     border-radius: 20px;
@@ -660,12 +662,12 @@
 
   .payment-method-text,
   .payment-method-text-paid {
-    font-size: 8px;
+    font-size: 0.8rem;
   }
 
   .order-info-line--one {
     font-weight: 700;
-    font-size: 15px;
+    font-size: 0.9375rem;
     line-height: 100%;
     letter-spacing: 0%;
     text-transform: capitalize;
@@ -673,14 +675,14 @@
 
   .order-info-line--two {
     font-weight: 400;
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 100%;
     letter-spacing: 0%;
     text-transform: capitalize;
   }
 
   .order-info-line--three {
-    font-size: 12px;
+    font-size: 0.75rem;
     margin-left: 0;
     gap: 2px;
     margin-top: 10px;
@@ -692,8 +694,6 @@
     height: 2.5px;
     margin: 0 1px;
   }
-
-
 
   .weeklyTrend-and-activeOrders {
     display: flex;
@@ -711,7 +711,6 @@
     flex-direction: column;
     justify-content: center;
     background-color: white;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.08);
   }
 
   .weeklyTrend-heading {
@@ -735,32 +734,22 @@
 
   .active-orders {
     flex: 1;
-    padding-top: 1.375rem;
-    padding-bottom: 1rem;
     display: flex;
     flex-direction: column;
     background-color: transparent;
   }
 
-  .active-orders-heading,
-  .credits-heading {
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 100%;
-    letter-spacing: 0%;
-  }
-
   .active-orders-heading {
     text-transform: capitalize;
-    padding-left: 5px;
+    padding-left: 0px;
     padding-right: 1.1875rem;
+    padding-bottom: 0;
+    margin-bottom: 0;
   }
-
-  .active-order-text-btn {
-    display: flex;
-    justify-content: space-between;
+  .view-all-btn-2 {
+    margin: 0;
+    padding: 0;
   }
-
   .active-orders-details {
     display: flex;
     justify-content: space-between;
@@ -773,7 +762,7 @@
     padding-top: 11px;
     padding-bottom: 9px;
     margin-bottom: 11px;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.08);
+
     background: white;
   }
 
@@ -781,13 +770,13 @@
     display: flex;
     gap: 5px;
     flex-direction: column;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 400;
   }
 
   .active-orders-price {
     font-weight: 700;
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 100%;
     letter-spacing: 0%;
     text-transform: capitalize;
@@ -799,8 +788,8 @@
     justify-content: center;
     width: 100%;
     background: linear-gradient(270deg, #12306d 0%, #1871db 100%);
+    margin-top: 0;
     border-radius: 0.3125rem;
-    margin-top: 1.8125rem;
     padding: 1.9375rem 1.5625rem 7px 1.5625rem;
   }
 
@@ -822,13 +811,22 @@
 
   .credits-added {
     font-weight: 400;
-    font-size: 16px;
+    font-size: 1rem;
     margin-bottom: 16px;
   }
-
+  .credits-heading {
+    margin-left: 0;
+    font-weight: 700;
+    font-size: 1.25rem;
+    padding-right: 1.1875rem;
+    line-height: 100%;
+    letter-spacing: 0%;
+    margin-top: 11.2px;
+    margin-bottom: 17px;
+  }
   .buy-credits-btn {
     font-weight: 400;
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 100%;
     letter-spacing: 0%;
     text-transform: capitalize;
@@ -855,12 +853,10 @@
 }
 /* Desktop responsive styles */
 @media (min-width: 1101px) {
-  .new-orders-heading {
-    font-weight: 700;
-    font-size: 1.25rem;
-    line-height: 100%;
-    letter-spacing: 0%;
+  html {
+    font-size: 18px;
   }
+
   .view-all-btn {
     font-weight: 400;
     font-size: 1rem;
@@ -871,11 +867,16 @@
     border: none;
     margin-right: 0;
   }
+  .view-all-btn-2 {
+    margin-top: 0;
+    margin-bottom: 20px;
+  }
   .new-order--cta {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 2.0625rem;
+    margin-top: 11.2px;
+    margin-bottom: 17px;
   }
   .new-orders-container {
     margin-top: 20px;
@@ -892,12 +893,12 @@
   }
   .order-id {
     font-weight: 700;
-    font-size: 18px;
+    font-size: 1.125rem;
     line-height: 100%;
   }
   .restaurant {
     font-weight: 700;
-    font-size: 18px;
+    font-size: 1.125rem;
     line-height: 100%;
   }
   .id-and-restaurant {
@@ -905,14 +906,14 @@
     flex-wrap: nowrap;
     margin-bottom: 12px;
   }
-  .payment-method-COD {
+  .payment-method-COD,
+  .payment-method-Paid {
     font-weight: 400;
-    font-size: 13px;
+    font-size: 0.8125rem;
     line-height: 100%;
     border-radius: 20px;
-    padding: 10px 6px 10px 6px;
+    padding: 5px 6px 5px 6px;
   }
-
 
   .stat-card:hover {
     transform: scale(1.02);
@@ -921,8 +922,18 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.08);
     transition: all 0.1s ease-in-out;
   }
+  .weekly-delivery-trend {
+    max-width: 520px;
+  }
   .active-orders {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.08);
+  }
+  .active-order-text-btn {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 25px;
+    margin-bottom: 0px;
   }
   .credits-heading {
     display: none;
@@ -933,3 +944,6 @@
     transition: all 0.1s ease-in-out;
   }
 }
+
+/* .stat-card {
+  } */
