--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,6 @@ html {
   font-size: 1.25rem;
   line-height: 100%;
   letter-spacing: 0%;
-  margin-top: 11.2px;
-  margin-bottom: 17px;
 }
 .dashboard-shadow {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.08);
@@ -34,6 +32,8 @@ html {
   grid-template-columns: repeat(4, 1fr);
   column-gap: 1rem;
   row-gap: 1rem;
+  margin-top: 16px;
+  margin-bottom: 16px;
 }
 
 .stat-card {
@@ -109,7 +109,11 @@ html {
 }
 
 .restaurant {
+  max-width: 175px;
   text-wrap: nowrap;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   color: var(--color-black);
 }
 
@@ -174,7 +178,7 @@ html {
 .weeklyTrend-and-activeOrders {
   display: flex;
   gap: 13px;
-  margin-top: 23px;
+  margin-top: 13px;
 }
 
 .weeklyTrend-container {
@@ -272,7 +276,7 @@ html {
   width: 100%;
   background: linear-gradient(270deg, #12306d 0%, #1871db 100%);
   border-radius: 0.3125rem;
-  margin-top: 1.8125rem;
+  margin-top: 23px;
   padding: 1.9375rem 1.5625rem 1.1875rem 1.5625rem;
 }
 
@@ -359,7 +363,6 @@ html {
   padding: 0.75rem 0rem 0.8125rem 1.625rem;
   display: flex;
   flex-direction: column;
-  max-width: 500px;
 }
 
 .order-status {
@@ -368,6 +371,7 @@ html {
   height: 19px;
   line-height: 100%;
   letter-spacing: 0%;
+  max-width: 150px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -380,6 +384,8 @@ html {
   font-size: 1rem;
   line-height: 100%;
   letter-spacing: 0%;
+  max-width: 150px;
+
   color: var(--color-text);
   white-space: nowrap;
   overflow: hidden;
@@ -400,7 +406,6 @@ html {
   display: flex;
   flex-direction: column;
   gap: 4.6px;
-  max-width: 500px;
   white-space: nowrap;
   overflow: hidden;
 }
@@ -458,26 +463,26 @@ html {
 
   .new-orders-wrapper {
     display: flex;
-
+    margin-top: 16px;
     gap: 13px;
   }
 
   .credits-heading {
     font-weight: 700;
     font-size: 1.25rem;
-    margin-top: 34px;
     line-height: 100%;
     letter-spacing: 0%;
+    margin-top: 16px;
+    margin-bottom: 16px;
   }
   .new-order--cta {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 11.2px;
-    margin-bottom: 17px;
   }
   .view-all-btn {
     font-weight: 400;
+    margin-top: 11.2px;
     font-size: 0.875rem;
     line-height: 100%;
     color: var(--color-link);
@@ -491,11 +496,10 @@ html {
   .payment-method-COD,
   .payment-method-Paid {
     display: flex;
-    min-width: 70px;
     height: 1rem;
     padding: 0px 5px 0px 5px;
     font-size: 0.5rem;
-    min-width: 60px;
+
     justify-content: center;
     align-items: center;
     border-radius: 20px;
@@ -511,12 +515,15 @@ html {
     padding-left: 0; /* Remove extra padding */
   }
   .weeklyTrend-container {
-    margin-bottom: 10px;
+    margin-top: 16px;
   }
-  .credits-heading {
-    margin-top: 15px;
-    margin-bottom: 15px;
+  .weeklyTrend-heading-mobile {
+    display: none;
   }
+  .active-orders {
+    margin-top: 16px;
+  }
+
   .order-info-line--three {
     gap: 150px; /* Adjust gap for better layout on tablets */
   }
@@ -532,9 +539,7 @@ html {
     margin-bottom: 20px;
     padding-right: 20px;
   }
-  .credits {
-    margin-top: 0px;
-  }
+
   .buy-credits-btn {
     margin-left: 21%; /* Center button */
     margin-right: auto; /* Center button */
@@ -543,6 +548,8 @@ html {
 
   .credits {
     flex-direction: row; /* Keep credits section as a row on tablets */
+    margin-top: 16px;
+
     align-items: center; /* Center items vertically */
     justify-content: space-between; /* Space out items */
   }
@@ -551,7 +558,9 @@ html {
   .credits-added {
     padding-left: 0; /* Remove extra padding */
   }
-
+  .notifications-messages {
+    margin-top: 16px;
+  }
   .recent-notifications,
   .messages {
     height: auto; /* Allow height to adjust based on content */
@@ -608,6 +617,7 @@ html {
     display: flex;
     flex-direction: column;
     gap: 13px;
+    margin-top: 16px;
   }
 
   .new-orders-heading {
@@ -635,12 +645,11 @@ html {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 11.2px;
-    margin-bottom: 17px;
   }
 
   .new-order-details {
-    padding: 10px;
+    padding: 1rem 1rem 0.5rem 1rem;
+
     gap: 8px;
   }
 
@@ -698,37 +707,43 @@ html {
   .weeklyTrend-and-activeOrders {
     display: flex;
     flex-direction: column;
-    gap: 13px;
-    margin-top: 23px;
+    gap: 0px;
+    margin-top: 0;
   }
 
   .weeklyTrend-container {
     flex: 1;
     background: white;
-    padding-top: 1.375rem;
+    padding-top: 0;
+    padding-right: 0;
     padding-bottom: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     background-color: white;
   }
-
-  .weeklyTrend-heading {
+  .line-on-mobile {
+    display: none;
+  }
+  .weeklyTrend-heading-mobile {
     font-weight: 700;
     font-size: 1.25rem;
-    padding-left: 26px;
-    padding-right: 1.1875rem;
+
     line-height: 100%;
     letter-spacing: 0%;
-    padding-bottom: 0.9375rem;
+
+    margin-top: 16px;
+    margin-bottom: 16px;
+  }
+  .weeklyTrend-heading {
+    display: none;
   }
 
   .weekly-delivery-trend {
     width: 100%;
-    height: 280px;
-    padding-top: 1.125rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    height: 270px;
+    padding-top: 10px;
+    padding-left: 10px;
     transition: all 0s ease-out;
   }
 
@@ -750,6 +765,10 @@ html {
     margin: 0;
     padding: 0;
   }
+  .active-order-text-btn {
+    margin-top: 16px;
+    margin-bottom: 16px;
+  }
   .active-orders-details {
     display: flex;
     justify-content: space-between;
@@ -762,7 +781,7 @@ html {
     padding-top: 11px;
     padding-bottom: 9px;
     margin-bottom: 11px;
-
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.08);
     background: white;
   }
 
@@ -815,14 +834,14 @@ html {
     margin-bottom: 16px;
   }
   .credits-heading {
-    margin-left: 0;
     font-weight: 700;
     font-size: 1.25rem;
-    padding-right: 1.1875rem;
+    padding: 0;
     line-height: 100%;
-    letter-spacing: 0%;
-    margin-top: 11.2px;
-    margin-bottom: 17px;
+    letter-spacing: 0;
+    margin-top: 8px;
+
+    margin-bottom: 18px;
   }
   .buy-credits-btn {
     font-weight: 400;
@@ -875,13 +894,11 @@ html {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 11.2px;
-    margin-bottom: 17px;
   }
   .new-orders-container {
-    margin-top: 20px;
+    margin-top: 16px;
     min-height: 201px;
-    padding: 1.625rem;
+    padding: 1rem 1rem 0.5rem 1rem;
   }
 
   .order-info-line--one {
@@ -922,8 +939,17 @@ html {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.08);
     transition: all 0.1s ease-in-out;
   }
+  .weeklyTrend-and-activeOrders {
+    width: 100%;
+  }
+  .notifications-messages {
+    width: 100%;
+  }
   .weekly-delivery-trend {
-    max-width: 520px;
+    width: 100%;
+  }
+  .weeklyTrend-heading-mobile {
+    display: none;
   }
   .active-orders {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.08);
