--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ html {
   column-gap: 1rem;
   row-gap: 1rem;
   margin-top: 16px;
-  margin-bottom: 16px;
+  margin-bottom: 1.5rem;
 }
 
 .stat-card {
@@ -52,7 +52,7 @@ html {
 
 .stat-heading {
   font-weight: 400;
-  font-size: 1rem;
+  font-size: 0.889rem ; /* 16px */
   line-height: 100%;
   letter-spacing: 0%;
   text-transform: uppercase;
@@ -61,11 +61,12 @@ html {
 
 .stat-one {
   font-weight: 700;
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   line-height: 100%;
   letter-spacing: 0%;
   text-transform: capitalize;
   color: var(--color-black);
+  margin-bottom: .7rem;
 }
 
 .stat-two {
@@ -81,13 +82,21 @@ html {
 .new-orders-wrapper {
   display: flex;
   gap: 13px;
+  margin-bottom: 1.5rem;
 }
 
 .new-orders-container {
   background-color: white;
-
+  cursor: pointer;
   flex: 1;
+  transition: all 0.1s ease-in-out;
 }
+.new-orders-container:hover{
+transform: scale(1.01);
+    opacity: 0.9;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.08);
+    
+} 
 
 .new-order-details {
   display: flex;
@@ -101,7 +110,6 @@ html {
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
-  margin-right: 5px;
 }
 
 .order-id {
@@ -131,7 +139,6 @@ html {
 }
 
 .payment-method-text {
-  text-transform: uppercase;
   font-weight: 400;
   font-size: 0.8125rem;
   margin-bottom: 0;
@@ -168,7 +175,7 @@ html {
   letter-spacing: 0%;
   margin-top: 19.2px;
   margin-bottom: 16px;
-  margin-right: 15px;
+  margin-right: 5px;
 }
 
 .half-btn {
@@ -179,6 +186,7 @@ html {
   display: flex;
   gap: 13px;
   margin-top: 13px;
+  margin-bottom: 1.5rem;
 }
 
 .weeklyTrend-container {
@@ -276,8 +284,9 @@ html {
   width: 100%;
   background: linear-gradient(270deg, #12306d 0%, #1871db 100%);
   border-radius: 0.3125rem;
-  margin-top: 23px;
   padding: 1.9375rem 1.5625rem 1.1875rem 1.5625rem;
+    margin-bottom: 1.5rem;
+
 }
 
 .available-credits {
@@ -343,7 +352,6 @@ html {
 .notifications-messages {
   display: flex;
   gap: 13px;
-  margin-top: 23px;
 }
 
 .recent-notifications,
@@ -732,7 +740,6 @@ html {
     line-height: 100%;
     letter-spacing: 0%;
 
-    margin-top: 16px;
     margin-bottom: 16px;
   }
   .weeklyTrend-heading {
@@ -766,7 +773,7 @@ html {
     padding: 0;
   }
   .active-order-text-btn {
-    margin-top: 16px;
+    margin-top: 1.5rem;
     margin-bottom: 16px;
   }
   .active-orders-details {
@@ -841,7 +848,7 @@ html {
     letter-spacing: 0;
     margin-top: 8px;
 
-    margin-bottom: 18px;
+    margin-bottom: 1rem;
   }
   .buy-credits-btn {
     font-weight: 400;
@@ -910,12 +917,12 @@ html {
   }
   .order-id {
     font-weight: 700;
-    font-size: 1.125rem;
+    font-size: 1rem;
     line-height: 100%;
   }
   .restaurant {
     font-weight: 700;
-    font-size: 1.125rem;
+    font-size: 1rem;
     line-height: 100%;
   }
   .id-and-restaurant {
@@ -932,13 +939,7 @@ html {
     padding: 5px 6px 5px 6px;
   }
 
-  .stat-card:hover {
-    transform: scale(1.02);
-    outline: var(--color-primary) solid 2px;
-    opacity: 0.9;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.08);
-    transition: all 0.1s ease-in-out;
-  }
+
   .weeklyTrend-and-activeOrders {
     width: 100%;
   }
